scss version of the bootstrap 3 template

--- a/generators/bootstrap3/app/views/pages/index.liquid
+++ b/generators/bootstrap3/app/views/pages/index.liquid
@@ -5,13 +5,13 @@ published: true
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Bootply.com - Bootstrap 3 Template</title>
-    <meta name="generator" content="Bootply" />
+    <title>{{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    {{ 'bootstrap.css' | stylesheet_tag }}
-    {{ 'bootstrap-glyphicons.css' | stylesheet_tag }}
+
+    {{ 'application.css' | stylesheet_tag }}
+
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -66,9 +66,9 @@ published: true
       }
     </style>
   </head>
-  <body>        
+  <body>
     <div class="container">
-      <h1>Bootstrap 3 Template</h1>
+      <h1>{{ page.title }}</h1>
       <p class="lead">A Full Featured Example</p>
 
       <!-- Typography
@@ -196,10 +196,10 @@ published: true
           <div class="row">
             <div class="col-lg-9 col-sm-6"><div class="well">col-lg-9 / col-sm-6</div></div>
             <div class="col-lg-3 col-sm-6"><div class="well">col-lg-3 / col-sm-6</div></div>
-          </div>  
+          </div>
         </div>
       </section>
-        
+
       <!-- Bootstrap 3 Buttons
       ================================================== -->
       <section id="buttons">
@@ -209,7 +209,7 @@ published: true
         </div>
         <h2>Button Sizes (4)</h2>
         <ul class="the-buttons clearfix">
-            <li><a class="btn btn-xs btn-primary" href="#">btn-xs</a></li>  
+            <li><a class="btn btn-xs btn-primary" href="#">btn-xs</a></li>
             <li><a class="btn btn-sm btn-primary" href="#">btn-sm</a></li>
             <li><a class="btn btn-primary" href="#">btn</a></li>
             <li><a class="btn btn-lg btn-primary" href="#">btn-lg</a></li>
@@ -223,7 +223,7 @@ published: true
           <li><a class="btn btn-warning" href="#">Warning</a></li>
           <li><a class="btn btn-danger" href="#">Danger</a></li>
           <li><a class="btn btn-primary disabled" href="#">Disabled</a></li>
-          <li><a class="btn btn-link" href="#">Link</a></li>  
+          <li><a class="btn btn-link" href="#">Link</a></li>
           <li>
             <!-- Single button -->
             <div class="btn-group">
@@ -415,7 +415,7 @@ published: true
           </ul>
         </div>
       </section>
-        
+
       <!-- Forms
       ================================================== -->
       <section id="forms">
@@ -689,7 +689,7 @@ published: true
             </div>
           </div>
           <br>
-          
+
         <!-- Panel & ListGroups
         ================================================== -->
         <hr>
@@ -748,20 +748,20 @@ published: true
               </div>
             </div>
           </div>
-          
+
         <!-- Well Sizes
         ================================================== -->
         <hr>
           <h2>Well Sizes</h2>
           <div class="row">
             <div class="col-lg-12">
-               <div class="well well-sm"> 
+               <div class="well well-sm">
                   .well-sm
-                </div>      
-                <div class="well"> 
+                </div>
+                <div class="well">
                   .well
                 </div>
-               <div class="well well-lg"> 
+               <div class="well well-lg">
                   .well-lg
                 </div>
             </div>
