fix issues when generating a content type (localized was missing) and bootstrap / foundation sites

--- a/generators/bootstrap3/app/views/pages/index.liquid
+++ b/generators/bootstrap3/app/views/pages/index.liquid
@@ -20,51 +20,9 @@ published: true
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/samples/apple-touch-icon-114x114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/samples/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/samples/apple-touch-icon-precomposed.png">
-    <!-- CSS code from Bootply.com editor -->
-    <style type="text/css">
-      @media screen and (min-width: 992px) {
-        .the-icons li {
-          width: 12.5%;
-        }
-      }
-      .the-buttons > li {
-        float: left;
-        height: 80px;
-        padding: 10px;
-        border: 1px solid #ddd;
-        font-size: 12px;
-        line-height: 1.25;
-        text-align: center;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin: 0 -1px -1px 0;
-      }
-      .the-icons .glyphicon {
-        display: block;
-        margin: 5px auto;
-        vertical-align: middle;
-        margin-right: 3px;
-        font-size: 24px;
-      }
-      .the-icons li {
-        float: left;
-        width: 100px;
-        height: 110px;
-        padding: 10px;
-        border: 1px solid #ddd;
-        font-size: 12px;
-        line-height: 1.25;
-        text-align: center;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin: 0 -1px -1px 0;
-      }
-      .the-icons, .the-buttons {
-        list-style:none;
-      }
-    </style>
+
+    {% inline_editor %}
+
   </head>
   <body>
     <div class="container">
