implement new liquid tag: fetch_page (#209)

--- a/spec/fixtures/default/app/views/pages/all.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/all.liquid.haml
@@ -10,4 +10,7 @@ published: false
 <li>{{ page.title }}</li>
 {% endfor %}
 </ul>
+
+{% fetch_page our-music as my_page %}
+<p>Single page: {{ my_page.title }}</p>
 {% endblock %}
