with_scope allows passing variable (strings) that will be converted in regexp if the format is okay

--- a/spec/fixtures/default/app/views/pages/filtered.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/filtered.liquid.haml
@@ -1,11 +1,11 @@
 ---
 title: Various uses of the with_scope tag
 ---
-{% assign begin   = '2012-06-01 00:00:00' %}
-{% assign end     = '2012-06-10 23:59:59' %}
-{% assign prices  = '5.0,5.5' | split: ',' | map: 'to_f' %}
+{% assign begin_date  = '2012-06-01 00:00:00' %}
+{% assign end_date    = '2012-06-10 23:59:59' %}
+{% assign prices      = '5.0,5.5' | split: ',' | map: 'to_f' %}
 
-{% with_scope date.gte: begin, date.lte: end, city: /Kansas/, state.ne: 'Illinois', tags: 'awesome', tags.nin: 'bad', price.in: prices, order_by: 'price.desc' %}
+{% with_scope date.gte: begin_date, date.lte: end_date, city: /Kansas/, state.ne: 'Illinois', tags: 'awesome', tags.nin: 'bad', price.in: prices, order_by: 'price.desc' %}
 events={{ contents.events.count }}.
 {% endwith_scope %}
 
