--- a/spec/fixtures/default/app/views/snippets/song.liquid
+++ b/spec/fixtures/default/app/views/snippets/song.liquid
@@ -1,6 +1,6 @@
 <li>
-  <h3><a href="/songs/{{ song._permalink }}">{{ song.title }}</a></h3>
-  <div class="cover">{{ song.cover.url | image_tag }}</div>
+  <h3><a href="{% path_to song, with: a-song-template %}">{{ song.title }}</a></h3>
+  <div class="cover">{{ song.cover | image_tag }}</div>
   <div class="info">
     {{ song.short_description }}
     <p class="listen">
