allow users to specify which item(s) of a resource can be pushed

--- a/spec/fixtures/default/app/views/pages/layouts/simple.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/layouts/simple.liquid.haml
@@ -10,4 +10,4 @@ is_layout: true
   %body
     %h1 {% editable_short_text title %}[TODO]{% endeditable_short_text %}
     .text
-      {% editable_text content, format: html, rows: 5 %}[TODO]{% editable_text %}
+      {% editable_text content, format: html, rows: 5 %}[TODO]{% endeditable_text %}
