--- a/generators/content_type/app/content_types/%slug%.yml.tt
+++ b/generators/content_type/app/content_types/%slug%.yml.tt
@@ -25,6 +25,11 @@ order_by: manually
 # Array of emails to be notified of new entries made with the public API
 # public_submission_accounts: ['john@example.com']
 
+# Control the display of the seo and advanced tabs in the back-office.
+# display_settings:
+#   seo: false
+#   advanced: false
+
 # A list describing each field
 fields: <% config[:fields].each_with_index do |field, index| %>
 - <%= field.name -%>: # The lowercase, underscored name of the field
