clone command (WIP) + pull command (WIP): site + pages

--- a/generators/cloned/config/deploy.yml.tt
+++ b/generators/cloned/config/deploy.yml.tt
@@ -1,7 +1,8 @@
 production:
   host: <%= config[:host] %>
-<% if config[:email] -%>
+  handle: <%= config[:handle] %>
   email: <%= config[:email] %>
+<% if config[:password] -%>
   password: <%= config[:password] %>
 <% elsif config[:api_key] -%>
   api_key: <%= config[:api_key] -%>
