--- a/generators/content_type/app/content_types/%slug%.yml.tt
+++ b/generators/content_type/app/content_types/%slug%.yml.tt
@@ -43,7 +43,7 @@ fields: <% config[:fields].each_with_index do |field, index| %>
     required: <%= index == 0 ? true : field.required %>
     hint: Explanatory text displayed in the back office
     localized: <%= field.localized %><% if field.type == 'text' %>
-    # text_formatting: html # html (uses rich text editor) or text (uses plain text editor)<% end -%><% if field.type == 'select' -%>
+    # text_formatting: html # html (uses rich text editor), markdown or text (uses plain text editor)<% end -%><% if field.type == 'select' -%>
     # if localized, use
     #   en: ['option1_en', 'option2_en']
     #   fr: ['option1_fr', 'option2_fr']
