remove the redcarpet gem from the default Gemfile of site templates + add the bourbon gem (but commented) to the default Gemfile of site templates

--- a/generators/blank/Gemfile.tt
+++ b/generators/blank/Gemfile.tt
@@ -17,5 +17,5 @@ end
 group :misc do
   # Add your extra gems here
   # gem 'susy', require: 'susy'
-  # gem 'redcarpet', require: 'redcarpet'
+  # gem 'bourbon', require: 'bourbon'
 end
