--- a/generators/line_case/Gemfile.tt
+++ b/generators/line_case/Gemfile.tt
@@ -17,5 +17,5 @@ end
 group :misc do
   # Add your extra gems here
   # gem 'susy', require: 'susy'
-  # gem 'redcarpet', require: 'redcarpet'
+  # gem 'bourbon', require: 'bourbon'
 end
