glyphicons are correctly displayed now (even when deployed on a Locomotive Engine) locomotivecms/engine#1082

--- a/generators/bootstrap/public/stylesheets/bootstrap.scss
+++ b/generators/bootstrap/public/stylesheets/bootstrap.scss
@@ -9,7 +9,7 @@
 // $light-orange: #ff8c00;
 // $navbar-default-color: $light-orange;
 
-$icon-font-path: "/fonts/bootstrap";
+$icon-font-path: "../fonts/bootstrap/" !default;
 
 // Core variables and mixins
 @import "bootstrap/variables";
