fix broken spec

--- a/spec/fixtures/default/public/stylesheets/reboot.css
+++ b/spec/fixtures/default/public/stylesheets/reboot.css
@@ -73,10 +73,5 @@ p {
 .mr10 { margin-right: 10px !important; }
 .mb10 { margin-bottom: 10px !important; }
 .mb20 { margin-bottom: 20px !important; }
+.m10 { margin: 10px !important; }​
 .mb30 { margin-bottom: 30px !important; }
-.m10 { margin: 10px !important; }
-
-
-
-
-​
