--- a/generators/page/template.liquid.tt
+++ b/generators/page/template.liquid.tt
@@ -4,10 +4,12 @@ title: <%= config[:title] -%>
 
 # unique identifier for urls, the same as a permalink
 slug: <%= config[:slug] -%>
-<% end %>
+
+<% else -%>
+
 
 # true if the page is included in the menu
-listed: <% if config[:listed] -%><%= config[:listed] %><% else -%>true<% end -%>
+listed: <% if config[:listed] -%><%= config[:listed] %><% else -%>true<% end %>
 
 # true if the page is published
 published: true
@@ -26,6 +28,7 @@ published: true
 content_type: <%= config[:content_type] -%>
 <% else -%>
 # content_type: "<slug of one of the content types>"
+<% end %>
 <% end -%>
 
 # editable_elements:
