--- a/generators/bootstrap/config/site.yml.tt
+++ b/generators/bootstrap/config/site.yml.tt
@@ -27,6 +27,10 @@ seo_title: <%= @name %>
 meta_keywords: "some meta keywords"
 meta_description: "some meta description"
 
+# You can change the label of the metafields section in the Locomotive Engine left sidebar.
+# Default label is "Properties".
+# metafields_label: Store settings
+
 # Each site can have its own set of custom properties organized in namespaces.
 # First, define namespaces and their fields in the config/metafields_schema.yml file.
 # Finally, set default values below as described in the example.
