--- a/generators/content_type/app/content_types/%slug%.yml.tt
+++ b/generators/content_type/app/content_types/%slug%.yml.tt
@@ -32,6 +32,10 @@ order_by: manually
 #   position: 1             # position in the sidebar menu
 #   hidden: false           # hidden for authors?
 
+# You can add a search bar at the top of the list of entries in the back-office.
+# It will search for entries the fields listed below match the keyword.
+# filter_fields: ['name', 'email']
+
 # By default, the back-office displays the _label property (see label_field_name) of the content entry. This can be modified by writing your own Liquid template below:
 # entry_template: '<a href="{{ link }}">{{ entry._label }}</a>' # The default template
 
