Change gemfile to use dynamic wagon version

--- a/generators/foundation6/Gemfile.tt
+++ b/generators/foundation6/Gemfile.tt
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'locomotivecms_wagon', '~> 2.1.1'
+gem 'locomotivecms_wagon', '~> <%= config[:version] -%>'
 
 gem 'guard-livereload', '~> 2.5.1'
 
