--- a/generators/w3css/app/views/pages/index.liquid
+++ b/generators/w3css/app/views/pages/index.liquid
@@ -4,12 +4,11 @@ published: true
 handle: home
 ---
 {% extends 'layouts/simple' %}
-
 {% block content/main %}
 <div id="id01" class="w3-modal">
   <div class="w3-modal-content w3-card-4 w3-animate-top">
     <header class="w3-container w3-theme-l1">
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">Ã—</span>
+      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">X</span>
       <h4>Oh snap! We just showed you a modal..</h4>
       <h5>Because we can <i class="fa fa-smile-o"></i></h5>
     </header>
