--- a/generators/w3css/app/views/pages/index.liquid.haml
+++ b/generators/w3css/app/views/pages/index.liquid.haml
@@ -4,12 +4,11 @@ published: true
 handle: home
 ---
 {% extends 'layouts/simple' %}
-
 {% block content/main %}
 #id01.w3-modal
   .w3-modal-content.w3-card-4.w3-animate-top
     %header.w3-container.w3-theme-l1
-      %span.w3-button.w3-display-topright{:onclick => "document.getElementById('id01').style.display='none'"} Ã—
+      %span.w3-button.w3-display-topright{:onclick => "document.getElementById('id01').style.display='none'"} X
       %h4 Oh snap! We just showed you a modal..
       %h5
         Because we can
