--- a/generators/blank/app/views/pages/index.liquid
+++ b/generators/blank/app/views/pages/index.liquid
@@ -2,18 +2,10 @@
 title: Home page
 published: true
 ---
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ site.name }}</title>
-    <meta name="keywords" value="{{ site.meta_keywords }}" />
-    <meta name="description" value="{{ site.meta_description }}" />
-  </head>
-  <body>
-    <h1>{{ page.title }}</h1>
-    {% block 'main' %}
-    <p>Lorem ipsum....</p>
-    {% endblock %}
-  </body>
-</html>
+{% extends layouts/default %}
+
+{% block 'main' %}
+
+<p>Go to app/views/pages/index.liquid to modify the home page</p>
+
+{% endblock %}
