--- a/generators/page/template.liquid.tt
+++ b/generators/page/template.liquid.tt
@@ -41,6 +41,12 @@ content_type: <%= config[:content_type] -%>
 # Control the display of the page in the back-office.
 # display_settings:
 #   hidden: true          # hidden for authors?
+
+# Display a list of sections if there is the {% dropzone_sections %} liquid tag
+# is present in the page.
+# sections_content: >
+#   []
+#
 ---
 {% extends parent %}
 
