use label instead of name when generating a section setting

--- a/generators/section/template.liquid.tt
+++ b/generators/section/template.liquid.tt
@@ -4,7 +4,7 @@
   "class": "my-css-classname",
   "settings": [
     {
-      "name": "My awesome title",
+      "label": "My awesome title",
       "id": "title",
       "type": "text"
     }
@@ -15,7 +15,7 @@
       "type": "list_item",
       "settings": [
         {
-          "name": "Item title",
+          "label": "Item title",
           "id": "title",
           "type": "text"
         }
