--- a/generators/blank/app/views/pages/layouts/default.liquid
+++ b/generators/blank/app/views/pages/layouts/default.liquid
@@ -12,6 +12,10 @@ is_layout: false
 
     {{ 'bundle.css' | stylesheet_tag }}
     {{ 'bundle.js' | javascript_tag }}
+
+    {% if wagon %}
+      <script src="http://localhost:35729/livereload.js"></script>
+    {% endif %}
   </head>
   <body>
     <h1>{{ page.title }}</h1>
