--- a/generators/blank/package.json.tt
+++ b/generators/blank/package.json.tt
@@ -4,9 +4,9 @@
   "description": "Assets source for the <%= config[:name] %> website",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.dev.js --progress --colors --watch",
-    "build:dev": "webpack --config webpack.dev.js --progress",
-    "build:prod": "NODE_ENV=production webpack --config webpack.prod.js --progress",
+    "start": "webpack --config app/assets/webpack.dev.js --progress --colors --watch",
+    "build:dev": "webpack --config app/assets/webpack.dev.js --progress",
+    "build:prod": "NODE_ENV=production webpack --config app/assets/webpack.prod.js --progress --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wagon",
@@ -19,6 +19,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
@@ -29,7 +31,6 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-merge": "^4.1.4",
-    "file-loader": "^1.1.11",
-    "image-webpack-loader": "^4.3.0"
+    "webpack-livereload-plugin": "^2.2.0"
   }
 }
