--- a/generators/section/template.liquid.tt
+++ b/generators/section/template.liquid.tt
@@ -24,7 +24,7 @@
       ]
     }
   ]<% if config[:global] -%>,
-  "default": {
+  "global_content": {
     "settings": {
       "title": "Hello world"
     },
@@ -49,7 +49,7 @@
       }
     ]
   }<% else -%>,
-  "presets": [
+  "dropzone_presets": [
     {
       "name": "<%= config[:name] %>",
       "category": "Category 1",
