--- a/generators/webpack/package.json.tt
+++ b/generators/webpack/package.json.tt
@@ -27,6 +27,7 @@
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
