remove references to Thin + make Puma work when daemonized (fix issue #369) + fix typo in the generator files

--- a/generators/blank/package.json.tt
+++ b/generators/blank/package.json.tt
@@ -1,5 +1,5 @@
 {
-  "name": "<%= config[:name] %>",
+  "name": "<%= config[:name].camelcase %>",
   "version": "1.0.0",
   "description": "Assets source for the <%= config[:name] %> website",
   "main": "index.js",
