--- a/generators/section/%type%.js.tt
+++ b/generators/section/%type%.js.tt
@@ -18,7 +18,7 @@ const Section = {
   // blockSelect: (section, block) => {
   // },
 
-  // blockDeSelect: (section, block) => {
+  // blockDeselect: (section, block) => {
   // }
 
 }
